<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/randomTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <Button
        android:id="@+id/randomBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numRandom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="640dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/preguntaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pregunta"
            android:textAlignment="center"
            android:textSize="30sp" />

        <CheckBox
            android:id="@+id/checkBoxEntre2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divisible2" />

        <CheckBox
            android:id="@+id/checkBoxEntre3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divisible3" />

        <CheckBox
            android:id="@+id/checkBoxEntre5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divisible5" />

        <CheckBox
            android:id="@+id/checkBoxEntre10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divisible10" />

        <CheckBox
            android:id="@+id/checkBoxNinguno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noDivisible" />

        <Button
            android:id="@+id/resultadoBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comprobar" />

        <TextView
            android:id="@+id/resultadoTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="40sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="63dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>